applications/openeuler-usercenter/oneid-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oneid-server-service
  namespace: openeuler-usercenter
spec:
  ports:
  - name: https-port
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: oneid-server
  sessionAffinity: None
  type: ClusterIP
