applications/openeuler-usercenter/oneid-server/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  name: openeuler-oneid-server-ingress
  namespace: openeuler-usercenter
spec:
  rules:
  - host: oneid-server.osinfra.cn
    http:
      paths:
      - backend:
          service:
            name: oneid-server-service
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - oneid-server.osinfra.cn
    secretName: oneid-server-tls
